<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="30dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="180dp"
        android:layout_height="80dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/walmart_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/login"
        android:layout_marginTop="8dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@id/imageView"
        app:layout_constraintStart_toStartOf="@id/imageView"
        app:layout_constraintTop_toBottomOf="@id/imageView" />

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="22dp"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSignIn">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="32dp">

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/login_email"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/input_bg_curved_grey"
                android:cursorVisible="true"
                android:fontFamily="sans-serif-light"
                android:inputType="textEmailAddress"
                android:maxLength="50"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:textSize="18sp"
                android:hint="@string/enter_your_email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvEmail"
                android:autofillHints="emailAddress" />

            <TextView
                android:id="@+id/tv_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/login_password"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_email" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/input_bg_curved_grey"
                android:cursorVisible="true"
                android:inputType="textPassword"
                android:maxLength="50"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:textSize="18sp"
                android:hint="@string/enter_your_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_password"
                android:autofillHints="password" />

            <TextView
                android:id="@+id/tv_forgot_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:autoLink="all"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="sans-serif-condensed-medium"
                android:padding="2dp"
                android:text="@string/login_forgot_your_password"
                android:textAlignment="textEnd"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_password" />


            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/btn_bg_curved_stroke"
                android:text="@string/login_btn"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/tvNoAccount"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_forgot_password"
                app:layout_constraintVertical_bias="0.743" />

            <View
                android:id="@+id/viewLeft"
                android:layout_width="60dp"
                android:layout_height="2dp"
                android:background="@color/gray"
                app:layout_constraintBottom_toBottomOf="@+id/tvNoAccount"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvNoAccount" />

            <TextView
                android:id="@+id/tvNoAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/login_do_not_have_an_account_yet"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/btnCreateAccount"
                app:layout_constraintEnd_toStartOf="@+id/viewRight"
                app:layout_constraintStart_toEndOf="@+id/viewLeft" />

            <View
                android:id="@+id/viewRight"
                android:layout_width="60dp"
                android:layout_height="2dp"
                android:background="@color/gray"
                app:layout_constraintBottom_toBottomOf="@+id/tvNoAccount"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvNoAccount" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnCreateAccount"
                style="@style/CardView.Light"
                android:layout_width="0dp"
                android:layout_height="46dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/btn_signup_bg"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/login_link_sign_up"
                android:textAllCaps="false"
                android:textColor="@color/primary"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                android:contentDescription="@string/create_an_account" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>