<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShoppingActivity">

    <TextView
        android:id="@+id/tvWelcomeMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="welcome hello@gmail.com" />

    <TextView
        android:id="@+id/tvShopByCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_shop_by_categories"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcomeMessage" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvElectronic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvShopByCategory">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:src="@drawable/category_electronics" />
            <TextView
                android:id="@+id/tvElectronic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_electronics"
                android:layout_gravity="center"
                />
        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/cvClothing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toEndOf="@id/cvElectronic"
        app:layout_constraintTop_toBottomOf="@+id/tvShopByCategory">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:src="@drawable/category_clothing" />
            <TextView
                android:id="@+id/tvClothing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_clothing"
                android:layout_gravity="center"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvBeauty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvElectronic">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:src="@drawable/category_beauty" />
            <TextView
                android:id="@+id/tvBeauty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_beauty"
                android:layout_gravity="center"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvFood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@id/cvBeauty"
        app:layout_constraintTop_toBottomOf="@+id/cvClothing">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:src="@drawable/category_food" />
            <TextView
                android:id="@+id/tvFood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_food"
                android:layout_gravity="center"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>